# ContrAI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  contree-domain.md  main.py  mkdocs.yml  pyproject.toml  scrap-step1-test.ipynb  simulation_contree.ipynb
.github/workflows/: test.yml
ContrAI CLI/design_handoff_contrai_tui/: README.md
ContrAI CLI/design_handoff_contrai_tui/mockups/: index.html
contree/controller/: game_controller.py
contree/model/: __init__.py  bid.py  card.py  contract.py  deck.py  exceptions.py  game.py  player.py  round.py  team.py  trick.py
contree/view/: __init__.py  cli_view.py
docs/: README.md  architecture.md  index.md
docs/ai/: rule_based.md
docs/ai-ladder/: index.md  rl.md  rule_based.md  supervised.md
docs/analyzer/: api.md  index.md
docs/core/: api.md  index.md
docs/diagrams/: README.md  class_analyzer.puml  class_core.puml  class_engine.puml  class_workspace.puml  flow_scoring.mmd  index.md  seq_bidding.puml  seq_cli.puml  seq_round.puml  seq_scraper.puml  seq_trick.puml  state_cli_screens.mmd
docs/engine/: api.md  index.md
docs/scraper/: api.md  index.md
docs/stylesheets/: extra.css
src/bidding/: evaluator.py
src/engine/: __init__.py  probability_engine.py
src/models/: deck.py  hand.py
tests/: __init__.py
tests/test_controller/: test_controller.py
tests/test_model/: __init__.py  test_card.py  test_deck.py  test_game.py  test_player.py  test_team.py
